--- a/src/FacultyDetails.css
+++ b/src/FacultyDetails.css
@@ -83,7 +83,7 @@
 .Fd p,
 .Fd button {
   margin-top: 11px;
-  color: rgb(250, 210, 250);
+  color: rgb(255, 255, 255);
 }
 
 .statusSelect {
